@@ -17,6 +17,8 @@ module.exports = function (graphql, agent, { version, enabled }) {
     return graphql
   }
 
+  const ins = agent._instrumentation
+
   return clone({}, graphql, {
     graphql (descriptor) {
       const getter = descriptor.get
@@ -40,16 +42,9 @@ module.exports = function (graphql, agent, { version, enabled }) {
 
   function wrapGraphql (orig) {
     return function wrappedGraphql (schema, requestString, rootValue, contextValue, variableValues, operationName) {
-      var trans = agent._instrumentation.currTransaction()
-      var span = agent.startSpan('GraphQL: Unknown Query', 'db', 'graphql', 'execute')
-      var id = span && span.transaction.id
-      agent.logger.debug('intercepted call to graphql.graphql %o', { id: id })
-
-      // As of now, the only reason why there might be a transaction but no
-      // span is if the transaction have ended. But just to be sure this
-      // doesn't break in the future we add the extra `!span` guard as well
-      if (!trans || trans.ended || !span) {
-        agent.logger.debug('no active transaction found - skipping graphql tracing')
+      agent.logger.debug('intercepted call to graphql.graphql')
+      const span = ins.createSpan('GraphQL: Unknown Query', 'db', 'graphql', 'execute')
+      if (!span) {
         return orig.apply(this, arguments)
       }
 
@@ -74,7 +69,8 @@ module.exports = function (graphql, agent, { version, enabled }) {
         agent.logger.debug('graphql.Source(query) failed - skipping graphql query extraction')
       }
 
-      var p = orig.apply(this, arguments)
+      const spanRunContext = ins.currRunContext().enterSpan(span)
+      const p = ins.withRunContext(spanRunContext, orig, this, ...arguments)
       p.then(function () {
         span.end()
       })
@@ -84,15 +80,9 @@ module.exports = function (graphql, agent, { version, enabled }) {
 
   function wrapExecute (orig) {
     function wrappedExecuteImpl (schema, document, rootValue, contextValue, variableValues, operationName) {
-      var trans = agent._instrumentation.currTransaction()
-      var span = agent.startSpan('GraphQL: Unknown Query', 'db', 'graphql', 'execute')
-      var id = span && span.transaction.id
-      agent.logger.debug('intercepted call to graphql.execute %o', { id: id })
-
-      // As of now, the only reason why there might be a transaction but no
-      // span is if the transaction have ended. But just to be sure this
-      // doesn't break in the future we add the extra `!span` guard as well
-      if (!trans || trans.ended || !span) {
+      agent.logger.debug('intercepted call to graphql.execute')
+      const span = ins.createSpan('GraphQL: Unknown Query', 'db', 'graphql', 'execute')
+      if (!span) {
         agent.logger.debug('no active transaction found - skipping graphql tracing')
         return orig.apply(this, arguments)
       }
@@ -100,8 +90,11 @@ module.exports = function (graphql, agent, { version, enabled }) {
       var details = extractDetails(document, operationName)
       var queries = details.queries
       operationName = operationName || (details.operation && details.operation.name && details.operation.name.value)
-      if (queries.length > 0) span.name = 'GraphQL: ' + (operationName ? operationName + ' ' : '') + queries.join(', ')
+      if (queries.length > 0) {
+        span.name = 'GraphQL: ' + (operationName ? operationName + ' ' : '') + queries.join(', ')
+      }
 
+      const trans = span.transaction
       if (trans._graphqlRoute) {
         var name = queries.length > 0 ? queries.join(', ') : 'Unknown GraphQL query'
         if (trans.req) var path = getPathFromRequest(trans.req, true)
@@ -112,7 +105,8 @@ module.exports = function (graphql, agent, { version, enabled }) {
         trans.type = 'graphql'
       }
 
-      var p = orig.apply(this, arguments)
+      const spanRunContext = ins.currRunContext().enterSpan(span)
+      const p = ins.withRunContext(spanRunContext, orig, this, ...arguments)
       if (typeof p.then === 'function') {
         p.then(function () {
           span.end()
