@@ -29,10 +29,12 @@ test('graphql.graphql', function (t) {
   agent.startTransaction('foo')
 
   graphql.graphql(schema, query, root).then(function (response) {
+    t.ok(agent.currentSpan === null, 'no currentSpan .graphql().then(...)')
     agent.endTransaction()
     t.deepLooseEqual(response, { data: { hello: 'Hello world!' } })
     agent.flush()
   })
+  t.ok(agent.currentSpan === null, 'no currentSpan in sync code after .graphql(...)')
 })
 
 test('graphql.graphql - invalid query', function (t) {
@@ -49,16 +51,18 @@ test('graphql.graphql - invalid query', function (t) {
   agent.startTransaction('foo')
 
   graphql.graphql(schema, query, root).then(function (response) {
+    t.ok(agent.currentSpan === null, 'no currentSpan .graphql().then(...)')
     agent.endTransaction()
     t.deepEqual(Object.keys(response), ['errors'])
     t.strictEqual(response.errors.length, 1, 'should have one error')
     t.ok(response.errors[0].message.indexOf('Syntax Error') !== -1, 'should return a sytax error')
     agent.flush()
   })
+  t.ok(agent.currentSpan === null, 'no currentSpan in sync code after .graphql(...)')
 })
 
 test('graphql.graphql - transaction ended', function (t) {
-  t.plan(5)
+  t.plan(7)
 
   resetAgent(1, function (data) {
     t.strictEqual(data.transactions.length, 1)
@@ -81,8 +85,10 @@ test('graphql.graphql - transaction ended', function (t) {
   agent.startTransaction('foo').end()
 
   graphql.graphql(schema, query, root).then(function (response) {
+    t.ok(agent.currentSpan === null, 'no currentSpan .graphql().then(...)')
     t.deepLooseEqual(response, { data: { hello: 'Hello world!' } })
   })
+  t.ok(agent.currentSpan === null, 'no currentSpan in sync code after .graphql(...)')
 })
 
 test('graphql.execute', function (t) {
@@ -101,14 +107,16 @@ test('graphql.execute', function (t) {
   agent.startTransaction('foo')
 
   graphql.execute(schema, documentAST, root).then(function (response) {
+    t.ok(agent.currentSpan === null, 'no currentSpan .execute().then(...)')
     agent.endTransaction()
     t.deepLooseEqual(response, { data: { hello: 'Hello world!' } })
     agent.flush()
   })
+  t.ok(agent.currentSpan === null, 'no currentSpan in sync code after .execute(...)')
 })
 
 test('graphql.execute - transaction ended', function (t) {
-  t.plan(5)
+  t.plan(7)
 
   resetAgent(1, function (data) {
     t.strictEqual(data.transactions.length, 1)
@@ -133,8 +141,10 @@ test('graphql.execute - transaction ended', function (t) {
   agent.startTransaction('foo').end()
 
   graphql.execute(schema, documentAST, root).then(function (response) {
+    t.ok(agent.currentSpan === null, 'no currentSpan .execute().then(...)')
     t.deepLooseEqual(response, { data: { hello: 'Hello world!' } })
   })
+  t.ok(agent.currentSpan === null, 'no currentSpan in sync code after .execute(...)')
 })
 
 test('graphql.execute args object', function (t) {
@@ -158,10 +168,12 @@ test('graphql.execute args object', function (t) {
   agent.startTransaction('foo')
 
   graphql.execute(args).then(function (response) {
+    t.ok(agent.currentSpan === null, 'no currentSpan .execute().then(...)')
     agent.endTransaction()
     t.deepLooseEqual(response, { data: { hello: 'Hello world!' } })
     agent.flush()
   })
+  t.ok(agent.currentSpan === null, 'no currentSpan in sync code after .execute(...)')
 })
 
 if (semver.satisfies(pkg.version, '>=0.12')) {
@@ -181,6 +193,7 @@ if (semver.satisfies(pkg.version, '>=0.12')) {
     agent.startTransaction('foo')
 
     var response = graphql.execute(schema, documentAST, root)
+    t.ok(agent.currentSpan === null, 'no currentSpan in sync code after .execute(...)')
 
     agent.endTransaction()
     t.deepLooseEqual(response, { data: { hello: 'Hello world!' } })
