@@ -39,6 +39,9 @@ Notes:
 [float]
 ===== Bug fixes
 
+* Fixes for run context handling for 'graphql' instrumentation.
+  ({issues}2430[#2430])
+
 * Fixes for run context handling for DynamoDB instrumentation ('aws-sdk'
   package) so that a span created after an AWS client command (in the same
   tick, in the command callback, or promise) is not a child of the automatic
